--- a/css/style.css
+++ b/css/style.css
@@ -182,10 +182,6 @@ img {
   transform: scale(1.2)
 }
 
-.modal-open {
-  position: relative;
-  z-index: 1600;
-}
 .btn-outline-primary {
    border: solid #337ab7 2px;
    color: #ffffff;
@@ -193,6 +189,14 @@ img {
    width: 300px;
    margin-top: 5px;
  }
+ .btn-outline-primary:hover {
+    border: solid #ffffff 2px;
+    color: #ffffff;
+    background-color: #245580;
+    padding:20px;
+    width: 300px;
+    margin-top: 5px;
+  }
  .btn-active {
     border: solid #337ab7 2px;
     font-family: Arial;
@@ -213,5 +217,12 @@ img {
 }
 .outer-space.active{
   opacity: 1;
-  transform: scale(1.3)
+  transform: scale(1)
+}
+#galaxyInfo {
+  display: none;
+}
+#outerSpaceInfo {
+  display: none;
+  width: 250px;
 }
