--- a/css/style.css
+++ b/css/style.css
@@ -140,14 +140,25 @@ img {
   zoom: 0.8;
   height:1400px;
   width:100%;
-  background-image: url('../images/astroidbelt.png');
-  background-size:contain;
-  background-clip: border-box;
-  background-repeat: no-repeat;
-  background-position:center;"
+  margin-top: 40px;
   position: absolute;
   z-index: 10000;
+  opacity: 1;
+  transform: scale(1);
 }
+
+.spin-astroidbelt {
+    position: absolute;
+    z-index:1;
+    margin: 0 auto;
+    -webkit-animation:spin 180s linear infinite;
+    -moz-animation:spin 180s linear infinite;
+    animation:spin 180s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
 
 .planet{
   z-index: 100;
@@ -216,9 +227,14 @@ img {
   opacity: 0;
 }
 .outer-space.active{
+  position: relative;
+  z-index: 1;
+  transform:scale(0.8);
+  transition: all 6s ease;
+  margin:0px;
   opacity: 1;
-  transform: scale(1)
 }
+
 #galaxyInfo {
   display: none;
 }
@@ -226,3 +242,12 @@ img {
   display: none;
   width: 250px;
 }
+
+.image {
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
