--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   background-image: url('../images/background.jpg');
   background-clip: border-box;
   background-repeat: no-repeat;
-
+  overflow:hidden;
 }
 a{
   text-decoration: none;
@@ -51,7 +51,6 @@ img {
   width: 100px;
   height: 100%;
   padding: 50px;
-
 }
 
 .a-nav-tabs:hover{
@@ -63,7 +62,6 @@ img {
 
 .button-nav {
   width: 200px;
-  /*padding: 35px;*/
   border-bottom:none;
   font-size:25px;
   display: static;
@@ -71,28 +69,25 @@ img {
 
 .button-up{
   display: inline-block;
-
 }
 .button-down {
   display :inline-block;
-
 }
 
 .zoom1 {
   padding: 10px;
-
   float: left;
+  width:100px;
 }
 .zoom2 {
   padding: 10px;
-
   float:right;
 }
 
 .zoom-btn {
   padding: 15px;
   text-align:center;
-  width:100px;
+  width:170px;
 }
 .planet-wiki{
   height: 100%;
@@ -140,7 +135,7 @@ img {
   zoom: 0.8;
   height:1400px;
   width:100%;
-  margin-top: 40px;
+  /*margin-top: 10px;*/
   position: absolute;
   z-index: 10000;
   opacity: 1;
@@ -197,7 +192,7 @@ img {
    border: solid #337ab7 2px;
    color: #ffffff;
    padding:20px;
-   width: 300px;
+   width: 250px;
    margin-top: 5px;
  }
  .btn-outline-primary:hover {
@@ -205,7 +200,7 @@ img {
     color: #ffffff;
     background-color: #245580;
     padding:20px;
-    width: 300px;
+    width: 250px;
     margin-top: 5px;
   }
  .btn-active {
@@ -215,7 +210,7 @@ img {
     color: #ffffff;
     background-color: #245580;
     padding:20px;
-    width: 300px;
+    width: 250px;
     margin-top: 5px;
   }
 .outer-space{
@@ -241,6 +236,20 @@ img {
 #outerSpaceInfo {
   display: none;
   width: 250px;
+}
+
+.spacecraft {
+  position: relative;
+    display: block;
+    float: left;
+}
+
+.shuttle-animation-div {
+  position:fixed;
+  bottom:0px;
+  margin-bottom:-140px;
+  margin-left: 100px;
+  opacity: 0;
 }
 
 .image {
